--- a/package.json
+++ b/package.json
@@ -8,13 +8,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
+    "js-cookie": "^3.0.1",
     "next": "12.0.10",
+    "next-auth": "^4.2.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
+    "sass": "^1.49.7",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@types/node": "17.0.17",
+    "@types/js-cookie": "^3.0.1",
+    "@types/next-auth": "^3.15.0",
+    "@types/node": "17.0.15",
     "@types/react": "17.0.39",
+    "@types/react-redux": "^7.1.22",
+    "@types/styled-components": "^5.1.22",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "typescript": "4.5.5"
